--- a/README
+++ b/README
@@ -266,5 +266,7 @@ program as you would normally.
 Acknowledgments
 ---------------
 
-We thank Google and Microsoft Research India for student travel grants
-to partially support travel to present this work at ISSTA 2016.
+This work was partially supported by a faculty award by Mozilla
+Corporation.  We also thank Google and Microsoft Research India for
+student travel grants to partially support travel to present this work
+at ISSTA 2016.
