--- a/README
+++ b/README
@@ -1,3 +1,9 @@
+LICENSE
+-------
+SparseRacer is available under the Apache License, version 2.0. Please see the
+LICENSE file for details.
+
+
 SparseRacer
 --------
 
